source/css/style.css
body {
    padding: 0;
    margin: 0;
    background: #FFF;
    color: #000;
}

p {
    margin: 25px 0 25px
}

a {
    color: dodgerblue;
}

.remove-margin {
    margin: 0;
}

.remove-padding {
    padding: 0;
}

.icon-list {
    width: 245px;
    background: none;
}

.display {
    display: block !important;
}

.morph-shape {
    background-color: #373A47;
}

.menu-wrap {
    float: right;
    width: 20%
}

.menu-fixed {
    position: relative;
    z-index: 1000
}

.menu-fixed .content::before {
    content: '';
    display: none
}

.top h1, .top h2 {
    font-size: 70px;
    padding-top: 36px;
}

h1 a, .top h2 a {
    color: #CCC;
}

h1 a:hover, .top h2 a:hover {
    color: #999;
    text-decoration: none;
}

h1 span, .top h2 span {
    display: block;
    font-size: 20px;
    color: #CCC;
}

.no-decoration, .no-decoration li {
    list-style: none;
}

/* Menu */
.nav {
    list-style: none;
    padding: 0;
}

.nav a {
    text-decoration: none;
}

.nav li {
    padding-top: 5px;
    padding-bottom: 5px;
}

/* Container content */
.row-fluid {
    width: 90% !important;
    margin: 0 auto;
}

/* Intro */
.intro {
    text-align: center;
}

/* Main structure */

.content-wrap {
    margin: 0 auto;
    background: #FFF;
    width: 80%;
    float: right;
}

.content {
    max-width: 850px;
}

.top {
    margin: 0 auto;
}

.main-navigator {
    text-align: center
}

.main-navigator a {
    color: #FFFFFF;
    font-size: 20px;
    padding-top: 3px;
    padding-bottom: 3px;
}

.main-navigator a:hover {
    background-color: #0297AF;
    color: #000000;
}

/* Abstracts */
.clear {
    clear: both;
}

.left {
    float: left;
}

.right {
    float: right;
}

.item {
    width: 50%;
    padding: 1.5%;
    float: left;
}

.margin-top-30 {
    margin-top: 30px;
}

.text-center {
    text-align: center;
}

.item:hover {
    background: #f1f1f1;
}

.item .links div {
    width: 25%;
    font-size: 12px;
    float: left;
}

.align-center {
    border-bottom: 1px dashed #AAA;
    text-align: center;
    padding-bottom: 20px;
}

.logo {
    text-align: center;
}

.logo img {
    padding-top: 100px;
    margin: 0 auto;
}

p.description {
    font-family: 'Times New Roman';
    font-style: italic;
    font-size: 20px;
    padding-top: 20px
}

article {
    padding-top: 30px;
    padding-bottom: 30px;
    border-bottom: 1px dashed #AAA;
    max-width: 850px;
}

article h2 a {
    text-decoration: none;
    color: #328CFF
}

h4 small {
    display: block;
    font-size: 60%;
    color: #888;
}

footer.container {
    max-width: 900px;
}

footer.container {
    margin-top: 30px;
    padding: 30px 0;
    border-top: 1px dashed #aaa;
}

@media (max-width: 767px) {
    #shield-container {
        display: none;
    }

    .menu-wrap {
        width: 20% !important;
    }

    .item {
        width: 97%;
        padding: 1.5%;
        float: left;
    }
}

@media (max-width: 900px) {
    .menu-wrap {
        width: 12%;
    }

    .menu a span {
        display: none;
    }
}

@media (min-width: 960px) {

    .content-wrap {
        width: 80%;
    }
}

pre code {
    background-color: inherit;
}

.logo-cont {
    height: 100px;
}

.logo-cont canvas {
    z-index: 2;
    pointer-events: none;
    background: transparent;
}

.ocramius, .mastodon, .github, .roave, .zendframework, .doctrine {
    padding-left: 1.5em;
    background-repeat: no-repeat;
    background-position: left;
    background-size: contain;
}

.social-media {
    padding-left: 31%;
}

.social-media a {
    float: left;
    width: 3%;
    list-style: none;
}

.ocramius {
    background-image: url('../img/marco-pivetta-ocramius.gif');
}

.mastodon {
    background-image: url('../img/mastodon.svg');
}

.github {
    background-image: url('../img/github.svg');
}

.roave {
    background-image: url('../img/roave.svg');
}

.zendframework {
    background-image: url('../img/zendframework.png');
    padding-left: 2.5em;
}

.doctrine {
    background-image: url('../img/doctrine.svg');
    padding-left: 1.2em;
}

.sidebar a.github, .sidebar a.twitter, .sidebar a.github:hover, .sidebar a.twitter:hover {
    color: rgba(0, 0, 0, 0);
    background-position: center;
}

